examples/test/testpolicy15795.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15795
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key49: value3
      key15: value23
      key24: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value35
      podSelector:
        matchLabels:
          key23: value26
          key10: value17
          key11: value48
